--- a/src/app/pages/project-page/project-page.component.html
+++ b/src/app/pages/project-page/project-page.component.html
@@ -40,12 +40,20 @@
             <h2 class="shiny-title fw-bold mb-3">Resumen</h2>
             <p class="fs-5 my-0">{{project.summary}}</p>
 
-            <div class="ratio ratio-16x9 my-5">
-                <video controls>
-                    <source [src]="project.demoVideoUrl" type="video/mp4">
-                    Tu navegador no soporta el tag de video.
-                </video>
+            @for (video of project.videos; track video) {
+            <div class="mt-5">
+                <h3>{{ video.title }}</h3>
+                <div class="ratio ratio-16x9 mt-4">
+                    <video preload="none" controls [poster]="video.thumbnail">
+                        <source [src]="video.link" type="video/mp4">
+                        Tu navegador no soporta el tag de video.
+                    </video>
+                </div>
             </div>
+
+            }
+
+
         </div>
 
     </section>
